tests/src/frontend/syntax/invalid/unused_variable.sk
fun main(): void {
  unused = 10;
  print_string("Hello Skip!")
}
